--- a/index.html
+++ b/index.html
@@ -21,10 +21,20 @@
   </style>
 </head>
 <body>
+  <div id="firstComment" class="comment">
+    <button class="replyBtn"><img class="replyImg" src="./images/icon-reply.svg"> Reply</button>
+    <div class="commentDetails">
+      <img class="commentAvatar" src="images/avatars/image-amyrobson.png">
+      <span class="username">amyrobson</span>
+      <span class="Longago">1 month ago</span>
+    </div>
+    <p>Impressive! Though it seems the drag feature could be imporved. But overall it looks incredible. You've nailed the design and the responsiveness at various breakpoints works really well.</p>
+  </div>
+  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Badra Mohamed</a>.
   </div>
 </body>
 </html>
