added upvote and downvote buttons

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 </head>
 <body>
   <div id="firstComment" class="comment">
+    <button> 
+      <img src="./images/icon-plus.svg" alt="upvote"/>
+    </button>
+    <div class="points">12</div>
+    <button> 
+      <img src="./images/icon-minus.svg" alt="downvote"/>
+    </button>
+   
     <button class="replyBtn"><img class="replyImg" src="./images/icon-reply.svg"> Reply</button>
     <div class="commentDetails">
       <img class="commentPic" src="images/avatars/image-amyrobson.png">
@@ -33,6 +41,13 @@
   </div>
   
   <div id="SecondComment" class="comment">
+    <button> 
+      <img src="./images/icon-plus.svg" alt="upvote"/>
+    </button>
+    <div class="points">5</div>
+    <button> 
+      <img src="./images/icon-minus.svg" alt="downvote"/>
+    </button>
     <button class="replyBtn"><img class="replyImg" src="./images/icon-reply.svg"> Reply</button>
     <div class="commentDetails">
       <img class="commentPic" src="images/avatars/image-maxblagun.png">
@@ -43,6 +58,13 @@
   </div>
 
   <div id="commentreply1" class="reply">
+    <button> 
+      <img src="./images/icon-plus.svg" alt="upvote"/>
+    </button>
+    <div class="points">4</div>
+    <button> 
+      <img src="./images/icon-minus.svg" alt="downvote"/>
+    </button>
     <button class="replyBtn">
       <img class="replyImg" src="./images/icon-reply.svg"> Reply</button>
       <div class="commentDetails">
@@ -54,6 +76,13 @@
     </div>
 
     <div id="commentreply2" class="reply">
+      <button> 
+        <img src="./images/icon-plus.svg" alt="upvote"/>
+      </button>
+      <div class="points">2</div>
+      <button> 
+        <img src="./images/icon-minus.svg" alt="downvote"/>
+      </button>
       <div class="commentDetails">
         <img class="commentPic" src="images/avatars/image-juliusomo.png">
         <span class="username">juliusomo</span>
